--- a/job-client-app/src/App.css
+++ b/job-client-app/src/App.css
@@ -1,19 +1,46 @@
 #root {
-  max-width: 1280px;
+  width: 100%; 
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+/* .navbar,
+.footer {
+  box-sizing: border-box;
+} */
+
+.main-content {
+  flex: 1;
+  max-width: 1280px; /* Center content within max width */
+  margin: 0 auto; /* Center the content */
+  padding: 1.5rem;
+}
+
+/* Body styles */
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+/* Logo styles */
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -33,6 +60,7 @@
   }
 }
 
+/* Card and text styling */
 .card {
   padding: 2em;
 }
