--- a/job-client-app/components/navbar/Navbar.css
+++ b/job-client-app/components/navbar/Navbar.css
@@ -1,4 +1,3 @@
-/* src/components/Navbar.css */
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -6,9 +5,9 @@
     background-color: #27001e;
     padding: 0.8rem 1.5rem;
     color: white;
-    width: 100%; /* Ensure full width */
-    box-sizing: border-box; /* Include padding in the width */
-    position: sticky; /* Make it stay at the top during scroll */
+    width: 100%; 
+    box-sizing: border-box; 
+    position: sticky; 
     top: 0;
   }
   
