--- a/job-client-app/components/home/HomePage.css
+++ b/job-client-app/components/home/HomePage.css
@@ -6,32 +6,34 @@
   
   .hero-section {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 2rem;
+    padding: 4rem 2rem;
     background-color: #f4f4f4;
+    text-align: center;
   }
   
-  .hero-left {
+  .hero-content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    flex: 2;
+    align-items: center;
+    gap: 2rem;
   }
   
   .search-bar {
     padding: 0.8rem;
     font-size: 1.1rem;
-    width: 100%;
+    width: 300px;
     border-radius: 5px;
-    border: 2px solid #27001e; 
-    background-color: #ffffff; 
-    color: rgb(0, 0, 0);
+    border: 2px solid #27001e;
+    background-color: #e3d9e1;
+    color: #000;
   }
   
   .filters {
     display: flex;
     gap: 1rem;
+    justify-content: center;
   }
   
   .filter {
@@ -39,33 +41,9 @@
     font-size: 1rem;
     border-radius: 5px;
     border: 2px solid #27001e;
-    background-color: #ffffff; 
-    color: rgb(0, 0, 0); 
-    width: 200px;
-  }
-  
-  .hero-right {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: flex-end;
-    flex: 1;
-  }
-  
-  .btn {
-    padding: 1rem 1.5rem;
-    font-size: 1rem;
-    background-color: #27001e;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: transform 0.5s ease;
-  }
-  
-  .btn:hover {
-    background-color: #460538;
-    transform: scale(1.1);
+    background-color: #e3d9e1;
+    color: #000;
+    width: 150px;
   }
   
   footer {
