--- a/job-client-app/components/loginPage/LoginPage.css
+++ b/job-client-app/components/loginPage/LoginPage.css
@@ -28,7 +28,7 @@
     width: 100%;
     max-width: 400px;
     gap: 1.2rem;
-    background-color: #f9f9f9;
+    background-color: #00000013;
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -48,13 +48,14 @@
   input {
     padding: 0.8rem;
     font-size: 1rem;
-    border: 1px solid #27001e;
     border-radius: 5px;
+    border: 2px solid #27001e; /* Updated border style */
     outline: none;
+    background-color: #e3d9e1; /* White background */
   }
   
   input:focus {
-    border-color: #5a0047;
+    border-color: #5a0047; 
   }
   
   button.btn-login {
