--- a/job-client-app/components/registerPage/RegisterPage.css
+++ b/job-client-app/components/registerPage/RegisterPage.css
@@ -1,4 +1,3 @@
-/* src/pages/RegisterPage.css */
 .register-page {
     display: flex;
     flex-direction: column;
@@ -28,7 +27,7 @@
     width: 100%;
     max-width: 400px;
     gap: 1.2rem;
-    background-color: #f9f9f9;
+    background-color: #00000013;
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -48,9 +47,10 @@
   input {
     padding: 0.8rem;
     font-size: 1rem;
-    border: 1px solid #27001e;
     border-radius: 5px;
+    border: 2px solid #27001e; 
     outline: none;
+    background-color: #e3d9e1; 
   }
   
   input:focus {
