--- a/job-client-app/components/footer/Footer.css
+++ b/job-client-app/components/footer/Footer.css
@@ -1,8 +1,8 @@
 .footer {
-    background-color: #27001e;
+    background-color: #024670;
     color: white;
     text-align: center;
-    padding: 2rem 1.5rem;
+    padding: 0.1rem 1rem;
     width: 100%; 
     box-sizing: border-box; 
     margin-top: auto;
@@ -12,7 +12,7 @@
     display: flex;
     flex-wrap: wrap; 
     justify-content: space-between;
-    gap: 2rem;
+    gap: 0.1rem;
     max-width: 1200px;
     margin: 0 auto;
   }
@@ -26,7 +26,7 @@
   
   .footer-column h3 {
     font-size: 1.2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.1rem;
   }
   
   .footer-column ul {
@@ -35,13 +35,13 @@
   }
   
   .footer-column ul li {
-    margin: 0.5rem 0;
+    margin: 0.1rem 0;
   }
   
   .footer-column ul li a {
     color: #61dafb;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 0.7rem;
   }
   
   .footer-column ul li a:hover {
@@ -49,8 +49,8 @@
   }
   
   .footer-bottom {
-    margin-top: 2rem;
-    font-size: 0.9rem;
-    color: #aaa;
+    margin-top: 0.1rem;
+    font-size: 0.7rem;
+    color: #ffffff;
   }
   
