--- a/job-client-app/components/loginPage/LoginPage.css
+++ b/job-client-app/components/loginPage/LoginPage.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     min-height: 100vh;
     background-color: white;
-    color: #27001e;
+    color: #024670;
   }
   
   .login-container {
@@ -14,11 +14,12 @@
     justify-content: center;
     padding: 2rem;
     flex: 1;
+    color: #013758;   
   }
   
   h2 {
     font-size: 2rem;
-    color: #27001e;
+    color: #024670;
     margin-bottom: 1.5rem;
   }
   
@@ -28,10 +29,10 @@
     width: 100%;
     max-width: 400px;
     gap: 1.2rem;
-    background-color: #00000013;
+    background-color: #002df313;
     padding: 2rem;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: #024670;
   }
   
   .input-group {
@@ -42,34 +43,53 @@
   
   label {
     font-size: 1rem;
-    color: #27001e;
+    color: #024670;
   }
   
   input {
     padding: 0.8rem;
     font-size: 1rem;
     border-radius: 5px;
-    border: 2px solid #27001e; /* Updated border style */
+    border: 2px solid #013758; /* Updated border style */
     outline: none;
-    background-color: #e3d9e1; /* White background */
+    background-color: #013758; /* White background */
   }
   
   input:focus {
-    border-color: #5a0047; 
+    border-color: #013758; 
   }
   
   button.btn-login {
-    background-color: #27001e;
-    color: white;
+    background-color: #024670;
+    color: #ffffff;
     padding: 1rem;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s ease;
+    transition: transform 0.3s ease;
   }
   
   button.btn-login:hover {
-    background-color: #5a0047;
+    background-color: #013758;
+    transform: scale(1.01);
+  }
+  .register-link {
+    margin-top: 1rem;
+    font-size: 0.9rem;
+    color: #024670;
+    text-align: center;
+  }
+  
+  .register-link a {
+    color: #013758;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
+  }
+  
+  .register-link a:hover {
+    color: #024670;
   }
   
