--- a/job-client-app/components/navbar/Navbar.css
+++ b/job-client-app/components/navbar/Navbar.css
@@ -1,64 +1,74 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #024670;
-    padding: 0.3rem 1.5rem;
-    color: white;
-    width: 100%;
-    box-sizing: border-box;
-    position: sticky;
-    top: 0;
-  }
-  
-  .navbar-logo a {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: white;
-    text-decoration: none;
-  }
-  
-  .navbar-links {
-    list-style: none;
-    display: flex;
-    gap: 3rem;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #024670;
+  padding: 0.3rem 1.5rem;
+  color: white;
+  width: 100%;
+  box-sizing: border-box;
+  position: sticky;
+  top: 0;
+}
 
-  
-  .navbar-links li a {
-    color: white;
-    font-weight: 500;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.5s;
-    font-size: 15px;
-  }
-  
-  .navbar-links li a:hover {
-    color: #ffd700;
-    transform: scale(1.1);
+.navbar-logo a {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
 
-  }
-  
-  .navbar-actions {
-    display: flex;
-    gap: 1rem;
-  }
-  
-  .navbar-btn {
-    padding: 0.8rem 1.2rem;
-    font-size: 0.9rem;
-    background-color: #208446;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
-  
-  .navbar-btn:hover {
-    background-color: #065e28;
-    transform: scale(1.1);
-    /* color: #ffd700; */
-  }
-  
+.navbar-links {
+  list-style: none;
+  display: flex;
+  gap: 3rem;
+}
+
+.navbar-links li a {
+  color: white;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: color 0.5s;
+}
+
+.navbar-links li a:hover {
+  color: #ffd700;
+  transform: scale(1.1);
+}
+
+.navbar-actions {
+  display: flex;
+  gap: 1rem;
+  align-items: center; /* Ensures the icons and buttons are aligned properly */
+}
+
+.navbar-btn {
+  padding: 0.8rem 1.2rem;
+  font-size: 0.9rem;
+  background-color: #208446;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.navbar-btn:hover {
+  background-color: #065e28;
+  transform: scale(1.1);
+}
+
+/* Styling the icons to match button styles */
+.navbar-actions a {
+  color: white;
+  display: inline-block;
+  padding: 0.8rem;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+
+.navbar-actions a:hover {
+  transform: scale(1.1); /* Only zoom effect on hover */
+}
+
