--- a/job-client-app/components/loginPage/LoginPage.css
+++ b/job-client-app/components/loginPage/LoginPage.css
@@ -92,4 +92,12 @@
   .register-link a:hover {
     color: #024670;
   }
+
+  .error-message {
+    color: red;
+    font-size: 1rem;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  
   
